--- a/style/colorPalette.css
+++ b/style/colorPalette.css
@@ -20,6 +20,7 @@ main {
 	font-size: inherit;
 	font-weight: 700;
 	background: linear-gradient(to bottom right, var(--primary), var(--secondary));
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	transition: 0.4s ease-out;
@@ -33,6 +34,9 @@ main {
 
 .colors {
 	display: grid;
+	padding: 20px;
+	width: 500px;
+	border-radius: 5px;
 	grid-template-columns: repeat(1, 1fr);
 	grid-gap: 1rem;
 }
